--- a/COVIDFRONT/package.json
+++ b/COVIDFRONT/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "bootstrap": "^5.1.3",
     "ng2-charts": "^3.0.8",
     "node": "^17.5.0",
     "pdf-fonts": "^1.1.2",
