--- a/COVIDFRONT/package.json
+++ b/COVIDFRONT/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
+    "html-to-pdfmake": "^2.3.10",
     "ng2-charts": "^3.0.8",
     "node": "^17.5.0",
     "pdf-fonts": "^1.1.2",
