--- a/COVIDFRONT/package.json
+++ b/COVIDFRONT/package.json
@@ -22,10 +22,12 @@
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
     "html-to-pdfmake": "^2.3.10",
+    "jquery": "^3.6.0",
     "ng2-charts": "^3.0.8",
     "node": "^17.5.0",
     "pdf-fonts": "^1.1.2",
     "pdfmake": "^0.2.4",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
